; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/winetest/extr_gui.c_textStep.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/winetest/extr_gui.c_textStep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@progressCurr = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c" (%d of %d)\0A\00", align 1
@progressMax = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @textStep to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @textStep(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i8* @vstrmake(i32* null, i32 %4)
  store i8* %5, i8** %3, align 8
  %6 = load i32, i32* @progressCurr, align 4
  %7 = add nsw i32 %6, 1
  store i32 %7, i32* @progressCurr, align 4
  %8 = load i8*, i8** %3, align 8
  %9 = load i32, i32* @stderr, align 4
  %10 = call i32 @fputs(i8* %8, i32 %9)
  %11 = load i32, i32* @stderr, align 4
  %12 = load i32, i32* @progressCurr, align 4
  %13 = load i32, i32* @progressMax, align 4
  %14 = call i32 @fprintf(i32 %11, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %12, i32 %13)
  %15 = load i8*, i8** %3, align 8
  %16 = call i32 @free(i8* %15)
  ret i32 0
}

declare dso_local i8* @vstrmake(i32*, i32) #1

declare dso_local i32 @fputs(i8*, i32) #1

declare dso_local i32 @fprintf(i32, i8*, i32, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
